# SensorKinect

./: CMakeLists.txt  README
Include/: XnPsVersion.h  XnStreamParams.h
Platform/Linux-x86/CreateRedist/: RedistMaker  install.sh
Platform/Win32/CreateRedist/: Engine.nsi  Redist.py
Platform/test/: build_release.sh  clean_release.sh
Source/Utils/XnSensorServer/: CMakeLists.txt  SensorServer.cpp
Source/XnCore/: CMakeLists.txt
Source/XnDDK/: CMakeLists.txt  XnDeviceStream.h  XnPropertySet.cpp  XnPropertySetInternal.h  XnStreamReaderDevice.cpp  XnStreamReaderStream.cpp  XnStreamReaderStream.h
Source/XnDeviceFile/: CMakeLists.txt  XnDeviceFileReader.cpp  XnDeviceFileReaderBC.cpp  XnFileDevice.cpp
Source/XnDeviceSensorV2/: CMakeLists.txt  XnDataProcessor.h  XnDeviceSensorIO.cpp  XnDeviceSensorIO.h  XnDeviceSensorInit.h  XnDeviceSensorProtocol.h  XnExportedSensorDevice.cpp  XnFirmwareStreams.cpp  XnHostProtocol.h  XnSensor.cpp  XnSensor.h  XnSensorAudioStream.cpp  XnSensorAudioStream.h  XnSensorClient.cpp  XnSensorClientServer.h  XnSensorClientStream.cpp  XnSensorClientStream.h  XnSensorDepthStream.cpp  XnSensorDepthStream.h  XnSensorFirmwareParams.cpp  XnSensorIRStream.cpp  XnSensorIRStream.h  XnSensorImageStream.cpp  XnSensorImageStream.h  XnSensorProductionNode.cpp  XnSensorProductionNode.h  XnSensorServer.cpp  XnSensorServer.h  XnSensorServerRunner.h  XnServerSession.cpp  XnSharedMemoryBufferPool.cpp  XnSharedMemoryBufferPool.h
Source/XnFormats/: CMakeLists.txt
